--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!-- Requidanger meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-
     <title>10.2.2</title>
+    
   </head>
   <body class="m-0">
 
-    <div class="headerbox">
-        <button type="button" class="btn btn-info mt-1 mb-1 pl-2"><a href="#">Domov</a></button>
-        <button type="button" class="btn btn-info mt-1 mb-1 pl-2"><a href="#">Rebríček najlepších filmov</a></button>
-        <button type="button" class="btn btn-info mt-1 mb-1 pl-2"><a href="#">Pridať recenziu</a></button>
+    <div class="p-1 bg-success">
+        <button type="button" class="btn btn-info mt-1 mb-1 pl-2"><a class="text-danger" href="#">Domov</a></button>
+        <button type="button" class="btn btn-info mt-1 mb-1 pl-2"><a class="text-danger" href="#">Rebríček najlepších filmov</a></button>
+        <button type="button" class="btn btn-info mt-1 mb-1 pl-2"><a class="text-danger" href="#">Pridať recenziu</a></button>
   </div>
 
   </body>
